--- a/src/Components/Formulario/Formulario.css
+++ b/src/Components/Formulario/Formulario.css
@@ -1,6 +1,6 @@
 .formulario{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     margin: 80px 0;
 }
 
@@ -15,4 +15,11 @@
     font-size: 32px;
     font-weight: 400;
     color: #212121;
+}
+
+.colorNEquipo{
+    display: inline-block;
+    position: relative;
+    top: -125px;
+    left: 300px;
 }
