--- a/src/Components/Formulario/Formulario.css
+++ b/src/Components/Formulario/Formulario.css
@@ -1,7 +1,9 @@
 .formulario{
     display: flex;
     justify-content: space-evenly;
-    margin: 80px 0;
+    margin: 80px 40px;
+    flex-wrap: wrap;
+    gap: 30px;
 }
 
 .formulario form{
@@ -10,6 +12,7 @@
     box-shadow: 7px 7px 15px rgba(0, 0, 0, 25%);
     border: 20px;
     padding:  8px 100px;
+    flex: 1;
 }
 .formulario h2{
     font-size: 32px;
@@ -20,6 +23,8 @@
 .colorNEquipo{
     display: inline-block;
     position: relative;
-    top: -125px;
+    top: -120px;
     left: 300px;
+    width: 17%;
+    height: 6%;
 }
